crates/plotnik-tests/tests/02-parser/recovery_unexpected/double_quantifier.txt
Q = (a)*+
------------------ DIAGNOSTICS -------------------
error: this pattern already uses `*` and cannot also use `+`
 --> query.ptk:1:9
  |
1 | Q = (a)*+
  |         ^
  |
help: remove the second quantifier
  |
1 - Q = (a)*+
1 + Q = (a)*
  |
